# scaler-hackathon

./: .gitignore  Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml
server/: __init__.py  app.py  environment.py  graders.py  tasks.py  ui.py
